# AtemExperimentalCompiler

./: .clang-format  .gitignore  CMakeLists.txt
Modules/Exceptions/: Atem.Exceptions.cpp
Modules/IR/: CMakeLists.txt
Modules/IR/AtemHIR/Dialect/IR/: AtemHIR.cpp  AtemHIR.td  AtemHIRAttrs.cpp  AtemHIRAttrs.hpp  AtemHIRAttrs.td  AtemHIRDialect.hpp  AtemHIRDialect.td  AtemHIROps.cpp  AtemHIROps.hpp  AtemHIROps.td  AtemHIROpsEnums.cpp  AtemHIROpsEnums.hpp  AtemHIRTypes.cpp  AtemHIRTypes.hpp  AtemHIRTypes.td  CMakeLists.txt
Modules/IR/AtemHIR/Interfaces/: AtemHIRFPTypeInterface.cpp  AtemHIRFPTypeInterface.hpp  AtemHIRFPTypeInterface.td  AtemHIRLoopOpInterface.cpp  AtemHIRLoopOpInterface.hpp  AtemHIRLoopOpInterface.td  AtemHIRUtilTypeInterface.cpp  AtemHIRUtilTypeInterface.hpp  AtemHIRUtilTypeInterface.td  CMakeLists.txt
Modules/IR/Tools/: CMakeLists.txt
Modules/IR/Tools/AtemIROpt/: CMakeLists.txt  atemir-opt.cpp
Modules/Lexer/: Atem.Lexer.cpp
Modules/Main/: Atem.Main.cpp
Modules/Parser/: Atem.Parser.cpp
Modules/Utils/Result/: Atem.Utils.Result.cpp
Modules/grammar/: AtemLexer.g  AtemParser.g
examples/: fibonacci.atem  pirate_game.atem  scf_test.atem  simpler_fibonacci.atem
grammar/: AtemLexer.g
tests/AtemHIR/IR/: function_op_test.mlir
